Fix display bug: margin of time indicator was too big

--- a/imports/ui/stylesheets/videoplayer/_videoplayer.scss
+++ b/imports/ui/stylesheets/videoplayer/_videoplayer.scss
@@ -71,7 +71,8 @@
 }
 
 .video-time {
-  margin: 0 10px;
+  margin-left: 10px;
+  margin-right: 20px;
 }
 
 .bottom-gradient {
